# CameraRecorder

./: .flake8  .gitignore  .pre-commit-config.yaml  .test_env  =0.38.1  =2.4.0  =2.5.0  =2023.7.22  =23.3  =24.7.0  =3.2.1  =3.7  =42.0.2  =5.0.9  =78.1.1  API-KEYS-ORGANIZATION.md  METHOD_VALIDATION_REPORT.md  README.md  audit-results.json  baseline-sha.txt  cdr_checksums.txt  cdr_lsusb.txt  cdr_repro_imports.txt  cdr_uname.txt  cli-config.yaml  environment.txt  error_flow_analysis.md  generate-jwt-tokens.js  how 85522b0 --name-only  lint-fix-results.txt  lint-remaining.txt  lint-results.txt  main.go  mypy.ini  new_config.yaml  package-lock.json  package.json  performance_test_output.txt  python-files-found.txt  reinstall-with-tokens.sh  (+15 more)
mediamtx-camera-service/: .gitignore  .test_env  .test_env.backup  .test_env.backup.20250824_140446  .test_env.backup.20250824_195657  =0.24.0  =5.9.0  CHANGELOG.md  CRITICAL_API_COMPLIANCE_FINDINGS.md  CURRENT_ACCURATE_STATUS.md  CURRENT_STATUS.md  Makefile  README.md  SPRINT2_COMPLETION_SUMMARY.md  TEST_EVOLUTION_LOG.md  audit_api_compliance.py  bandit_scan_results.json  debug_hanging.py  debug_health_server.py  flake8.txt  flake8_remaining.txt  fresh_installation_log.txt  interface_test_results.json  mypy.ini  package-lock.json  performance_sanity_results.json  performance_test_output.txt  performance_test_results.json  pyproject.toml  pyproject.toml.backup  pytest.ini  pytest.ini.backup  requirements-dev.txt  requirements.txt  run_all_tests.py  run_individual_tests.py  run_individual_tests_no_mocks.py  run_tests.py  (+28 more)
(+3699 files in other folders)
